fix icon valign

--- a/source/THEME_NAME/scss/helpers/_icons.scss
+++ b/source/THEME_NAME/scss/helpers/_icons.scss
@@ -2,6 +2,7 @@
   background: url('#{$path-img}/icons/icons.png') no-repeat;
   display: inline-block;
   height: 1em;
+  vertical-align: middle;
   width: 1em;
 }
 
